Fix shift

--- a/assets/css/extended/custom_.css
+++ b/assets/css/extended/custom_.css
@@ -52,7 +52,7 @@ body.dark .logo>a>svg>g>path {
 
 .header .logo>a>svg {
     vertical-align: initial;
-    margin-top: 0.433rem;
+    margin-top: 0.466rem;
 }
 
 .logo .logo-switches svg {
@@ -61,7 +61,7 @@ body.dark .logo>a>svg>g>path {
 
 .dark .header .logo>a>svg {
     vertical-align: initial;
-    margin-top: 0.499rem;
+    margin-top: 0.533rem;
 }
 
 .dark .logo .logo-switches svg {
